# pa1

./: CMakeLists.txt  README.md  package.xml
cfg/: flock.cfg
launch/: amcl.launch  flocking.launch  one_robot.launch
maps/: final.world  simple.world  simple.yaml
scripts/: flock.py  init_world.py  server.py
src/pa1/: behaviors.py  flock_math.py  flock_member.py
