<?xml version="1.0"?>
<package format="2">
  <name>pa1</name>
  <version>2.2.3</version>
  <description>
    Programming assingment 1 for COSC169
  </description>

  <maintainer email="monika.roznere.gr@dartmouth.edu">Monika Roznere</maintainer>
  <author email="monika.roznere.gr@dartmouth.edu">Monika Roznere</author>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>tf</exec_depend>

</package>
